; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_matroskaenc.c_put_ebml_num.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_matroskaenc.c_put_ebml_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32)* @put_ebml_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_ebml_num(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i64, i64* %5, align 8
  %10 = call i32 @ebml_num_size(i64 %9)
  store i32 %10, i32* %8, align 4
  %11 = load i64, i64* %5, align 8
  %12 = icmp ult i64 %11, 72057594037927935
  %13 = zext i1 %12 to i32
  %14 = call i32 @av_assert0(i32 %13)
  %15 = load i32, i32* %6, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* %8, align 4
  store i32 %18, i32* %6, align 4
  br label %19

19:                                               ; preds = %17, %3
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %8, align 4
  %22 = icmp sge i32 %20, %21
  %23 = zext i1 %22 to i32
  %24 = call i32 @av_assert0(i32 %23)
  %25 = load i32, i32* %6, align 4
  %26 = mul nsw i32 %25, 7
  %27 = zext i32 %26 to i64
  %28 = shl i64 1, %27
  %29 = load i64, i64* %5, align 8
  %30 = or i64 %29, %28
  store i64 %30, i64* %5, align 8
  %31 = load i32, i32* %6, align 4
  %32 = sub nsw i32 %31, 1
  store i32 %32, i32* %7, align 4
  br label %33

33:                                               ; preds = %45, %19
  %34 = load i32, i32* %7, align 4
  %35 = icmp sge i32 %34, 0
  br i1 %35, label %36, label %48

36:                                               ; preds = %33
  %37 = load i32*, i32** %4, align 8
  %38 = load i64, i64* %5, align 8
  %39 = load i32, i32* %7, align 4
  %40 = mul nsw i32 %39, 8
  %41 = zext i32 %40 to i64
  %42 = lshr i64 %38, %41
  %43 = trunc i64 %42 to i32
  %44 = call i32 @avio_w8(i32* %37, i32 %43)
  br label %45

45:                                               ; preds = %36
  %46 = load i32, i32* %7, align 4
  %47 = add nsw i32 %46, -1
  store i32 %47, i32* %7, align 4
  br label %33

48:                                               ; preds = %33
  ret void
}

declare dso_local i32 @ebml_num_size(i64) #1

declare dso_local i32 @av_assert0(i32) #1

declare dso_local i32 @avio_w8(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
